<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddUpdate">

    <TextView
        android:layout_width="182dp"
        android:elevation="2dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:fontFamily="@font/baloo_paaji_2"
        android:text="@string/add_update"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/add_new_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="#E1E1E1"
            android:hint="@string/type"
            android:outlineAmbientShadowColor="@color/black"
            android:outlineSpotShadowColor="@color/black"
            android:textColor="@color/black"></EditText>

    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/add">

    </Button>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="#9C9A9A"
        android:layout_gravity="center"
        android:textColor="@color/black"></Button>



</LinearLayout>