<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"

    tools:context=".AdminDashBoard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/black"
        android:fontFamily="@font/baloo_paaji_2"
        android:gravity="center"
        android:text="@string/student_detail_dialog_title"
        android:textColor="@color/white"

        android:textSize="20sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:background="#9C9A9A"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#9C9A9A"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/dialog_name_field"
                android:textColor="@color/white"
                android:textSize="20sp">


            </TextView>

            <TextView
                android:id="@+id/name_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/dialog_email_field"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/name_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/dialog_phone_field"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/name_branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/dialog_branch_field"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/name_enrollment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/dialog_enrollment_field"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/name_CGPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/dialog_cgpa_field"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="#9C9A9A"
            android:orientation="vertical">

            <TextView

                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"

                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"

                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"

                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"

                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/enrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"

                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/cgpa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:fontFamily="@font/baloo_paaji_2"
                android:gravity="center"
                android:padding="2dp"

                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>